--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="Author" content="Jakub Zukal - amFrdWJ6" />
-    <meta name="description" content="TODO" />
+    <meta name="description" content="amFrdWJ6's personal page and CV" />
     <title>Jakub Zukal as amFrdWJ6</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
     <header>
       <h1 class="medium-text">Jakub Zukal</h1>
       <h5 class="dark-text">amFrdWJ6</h5>
-      <p class="large-text">Frontend developer with good knowledge of backend</p>
+      <p class="large-text">FullStack developer with good knowledge of backend</p>
     </header>
     <hr />
 
@@ -51,8 +51,7 @@
           <span>Links:</span>
           <span>
             Curriculum Vitae:
-              <a href="">Česky</a>
-              <a href="">English</a>
+              <a href="https://github.com/amFrdWJ6/amFrdWJ6/blob/main/cv.pdf">English</a>
               -
             <a href="https://github.com/amFrdWJ6">GitHub</a>
           </span>
@@ -136,7 +135,7 @@
           </p>
 
           <p>
-            <strong class="dark-text">Webstack</strong>: TypeScript, React/<span class="dark-text">Vue</span>, NextJS/<span class="dark-text">Vite</span>, Drizzle-ORM/<span class="dark-text">Prisma</span>, AuthJS/<span class="dark-text">Lucia</span>, Tailwind/<span class="dark-text">StyleX</span>, Zod
+            <strong class="dark-text">Webstack</strong>: TypeScript, React, NextJS/<span class="dark-text">Vite</span>, Drizzle-ORM/<span class="dark-text">Prisma</span>, AuthJS/<span class="dark-text">Lucia</span>, Tailwind/<span class="dark-text">StyleX</span>, Zod, Jest
           </p>
 
           <p>
@@ -149,7 +148,6 @@
           <div>
             <header>Used in past</header>
             <span class="dark-text small-text">
-              The listed technologies below are only those on which I've spent hundreds of hours of hands-on work
             </span>
           </div>
           <p>
@@ -165,19 +163,21 @@
       <div class="w80">
         <article>
           <div class="flex-row justify-between">
-            <header>Chef</header>
-            <a href="">Link</a>
-          </div>
-          <p>TODO:</p>
-        </article>
-        <hr />
-
-        <article>
-          <div class="flex-row justify-between">
             <header>Kosmetika Hana</header>
-            <a href="">Link</a>
+            <div>
+              <a href="https://preview-hana.hovinka.cz/">Preview</a> - 
+              <a href="https://gist.github.com/amFrdWJ6/22434367a6fe8dbf8ab25170fd2878ab">Gist</a>
+            </div>
           </div>
-          <p>TODO: Description</p>
+          <p><span class="dark-text">Desc:</span> Website for my mother-in-law's business</p>
+          <p><span class="dark-text">Tech:</span> next, drizzle-orm, tailwind, zod, bun, react-toastify</p>
+          <p><span class="dark-text">Reason:</span> I was asked to because I am PC guy, ಠ_ಠ. Anyway, it's good enough reason to finally delve into UI & UX.</p>
+          <div><span class="dark-text">Status:</span> WIP
+            <ul>
+              <li>design: learning UI/UX on Skillshare and applying what i've learned, check preview link</li>
+              <li>code: check gist link, it's form for updating prices and db schema/queries</li>
+            </ul>
+          </div>
         </article>
         <hr />
 
@@ -185,20 +185,53 @@
           <div class="flex-row justify-between">
             <header>Reply</header>
             <div>
-              <a href="">Link</a> - 
-              <a href="">GitHub</a>
+              <a href="https://reply.hovinka.cz">Link</a> - 
+              <a href="https://github.com/amFrdWJ6/reply">GitHub</a>
             </div>
           </div>
-          <p>TODO: Description</p>
+          <p><span class="dark-text">Desc:</span> There are undecilliard ways to reply. Memes, memes everywhere! You need only a GitHub acc, lad!</p>
+          <p><span class="dark-text">Tech:</span> next/react, drizzle-orm, tailwind, authjs</p>
+          <p><span class="dark-text">Reason:</span> Life's a rodeo, partner, and we're all just tryin' to stay on the bull of memes</p>
+          <p><span class="dark-text">Status:</span> First public project, needs some rewriting and redesigning. Will do ASAP.</p>
         </article>
         <hr />
 
         <article>
           <div class="flex-row justify-between">
-            <header>BackLog</header>
-            <a href="">GitHub</a>
+            <header>Cyanide & Happiness Card Game</header>
+            <span>RLS: Q2/2024</span>
           </div>
-          <p>TODO: Description</p>
+          <p><span class="dark-text">Desc:</span> Description</p>
+          <p><span class="dark-text">Tech:</span> Vite, React, tRPC, Prisma, MongoDB, Bit</p>
+          <p><span class="dark-text">Reason:</span> I wanna get my hands on WebSockets and monorepo maintenance</p>
+          <p><span class="dark-text">Status:</span> Playing with monorepos (learning/breaking Bit & Vite)</p>
+        </article>
+        <hr />
+
+        <article>
+          <div class="flex-row justify-between">
+            <header>GardenLog</header>
+            <div>
+              <span>RLS: Q?/2024</span> - 
+              <a href="https://github.com/amFrdWJ6/gardenlog">GitHub</a>
+            </div>
+          </div>
+          <p><span class="dark-text">Desc:</span> Wiki for plants, logs for tracking everything on our garden + weather info and probably something else</p>
+          <p><span class="dark-text">Tech:</span> next, drizzle-orm, jest</p>
+          <p><span class="dark-text">Reason:</span> Wife wants to keep track of tasks such as seeding, thinning, planting, watering, fertilizing, propagating, transplanting, pruning, mulching, weeding, tilling, deadheading, harvesting, composting, grafting, pest controlling, winterizing, etc...</p>
+          <p><span class="dark-text">Status:</span> Currently working on database (schema, queries, tests). Check code <a href="https://github.com/amFrdWJ6/gardenlog/tree/main/src/db">here</a></p>
+        </article>
+        <hr />
+
+        <article>
+          <div class="flex-row justify-between">
+            <header>???</header>
+            <span>TBA: Q2/2024</span>
+          </div>
+          <p><span class="dark-text">Desc:</span> Mobile app for my too-much-ilion of recipes with generating shopping lists from weekly menu</p>
+          <p><span class="dark-text">Tech:</span> ReactNative, Expo</p>
+          <p><span class="dark-text">Reason:</span> I am spending too much time on tasks like searching for recipes I wish to repeat, taking my turn to cook my wife's recipes, as well as the never-ending weekly challenge of preparing the shopping list</p>
+          <p><span class="dark-text">Status:</span> Needs analysis</p>
         </article>
       </div>
     </section>
